-
Bug
-
Resolution: Done
-
P1: Critical
-
6.3.2
-
None
-
Windows 10.0.19044
Windows 10.0.19045
Windows 10.0.19042
-
-
35e54f9b7b (qt/qtbase/dev) 35e54f9b7b (qt/tqtc-qtbase/dev) a009aa97b1 (qt/qtbase/6.4) a009aa97b1 (qt/tqtc-qtbase/6.4) 905755304a (qt/qtbase/6.4.1) 905755304a (qt/tqtc-qtbase/6.4.1) 905755304a (qt/tqtc-qtbase/tqtc/qtinsight-6.4)
Microsoft C++ exception: winrt::hresult_error at memory location 0x00000077FFEFF0D0.
Stack:
KERNELBASE.dll!RaiseException() Unknown VCRUNTIME140.dll!_CxxThrowException(void * pExceptionObject, const _s__ThrowInfo * pThrowInfo) Line 75 C++ qnetworklistmanager.dll!winrt::throw_hresult(const winrt::hresult result) Line 4783 C++ [Inline Frame] qnetworklistmanager.dll!winrt::check_hresult(const winrt::hresult) Line 4828 C++ [Inline Frame] qnetworklistmanager.dll!winrt::impl::consume_Windows_Networking_Connectivity_IConnectionProfile<winrt::Windows::Networking::Connectivity::IConnectionProfile>::NetworkAdapter() Line 182 C++ qnetworklistmanager.dll!`anonymous namespace'::getTransportMedium(const winrt::Windows::Networking::Connectivity::ConnectionProfile & profile) Line 224 C++ qnetworklistmanager.dll!QNetworkListManagerEvents::emitWinRTUpdates() Line 259 C++ qnetworklistmanager.dll!QNetworkListManagerEvents::start() Line 150 C++ qnetworklistmanager.dll!QNetworkListManagerNetworkInformationBackend::start() Line 228 C++ qnetworklistmanager.dll!QNetworkListManagerNetworkInformationBackendFactory::create(QFlags<enum QNetworkInformation::Feature> requiredFeatures) Line 149 C++ Qt6Network.dll!QNetworkInformationPrivate::create(QFlags<enum QNetworkInformation::Feature> features) Line 293 C++ > Qt6Network.dll!QNetworkInformation::load(QFlags<enum QNetworkInformation::Feature> features) Line 710 C++
I've started to see such crashes in users crash reports after updating an app to Qt 6.3.2.
I don't remember I saw something similar with Qt 6.2.4, so it looks like a regression in Qt.
As I can see on AppCenter this crash occurred multiple times for some people but doesn't happen for others. Don't know why... probably they have some network misconfiguration or smth like that.
- relates to
-
QTBUG-91023 QNetworkInformation: Medium-related APIs
-
- Closed
-
-
QTBUG-108218 [Win] Access violation in QNetworkListManagerEvents
-
- Closed
-
-
QTBUG-108382 One more unhandled exception on QNetworkInformation::load()
-
- Closed
-
-
QTBUG-108605 Unhandled WinRT exception at QSystemLocalePrivate::uiLanguages()
-
- Closed
-
-
QTBUG-110408 [Win] Yet another unhandled exception on QNetworkInformation::load()
-
- Closed
-