QNetworkInformation[Win]: Catch potential exceptions

Some Windows SDKs seem to throw an exception (sometimes?) when
calling ConnectionProfile::NetworkAdapter.
Catch the exception and ignore it, we would return Unknown anyway.
And just in case it is needed, do the same for GetConnectionCost.

This requires enabling exceptions for the plugin.

Fixes: QTBUG-108156
Change-Id: Ie6c5adb3715578aa94ef3391afae79d9aecdc5d3
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 35e54f9b7bba9ad7b1757e0b8f7d03859a694b34)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>